--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,28 @@
 ### IntelliJ IDEA ###
-.idea/
-HELP.md
-target/
+.idea
 !ecommerce-backend/src/main/**/target/
-!**/src/test/**/target/
 *.iws
 *.iml
 *.ipr
+HELP.md
+target/
+!.mvn/wrapper/maven-wrapper.jar
+!**/src/main/**/target/
+!**/src/test/**/target/
 
 ### VS Code ###
 .vscode/
 .history/
+
+### NetBeans ###
+/nbproject/private/
+/nbbuild/
+/dist/
+/nbdist/
+/.nb-gradle/
+build/
+!**/src/main/**/build/
+!**/src/test/**/build/
 
 ### Java ###
 # Compiled class file
@@ -55,6 +67,14 @@ typings/
 npm-debug.log
 testem.log
 
+### STS ###
+.apt_generated
+.classpath
+.factorypath
+.project
+.settings
+.springBeans
+.sts4-cache
 
 # e2e
 e2e/*.js
