--- a/.gitignore
+++ b/.gitignore
@@ -5,8 +5,10 @@
 *.iml
 *.ipr
 HELP.md
-target/
 !.mvn/wrapper/maven-wrapper.jar
+target/
+!**/src/main/**/out/
+!**/src/test/**/out/
 !**/src/main/**/target/
 !**/src/test/**/target/
 
@@ -24,29 +26,26 @@ build/
 !**/src/main/**/build/
 !**/src/test/**/build/
 
-### Java ###
+### Java | Spring Boot (Backend) ###
+### STS ###
+.apt_generated
+.classpath
+.factorypath
+.project
+.settings
+.springBeans
+.sts4-cache
+bin/
+!**/src/main/**/bin/
+!**/src/test/**/bin/
+
 # Compiled class file
 *.class
 
 # Log file
 *.log
 
-# BlueJ files
-*.ctxt
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
-
-### Angular ###
+### Angular (Frontend) ###
 # compiled output
 dist/
 tmp/
@@ -66,15 +65,6 @@ typings/
 .angular/
 npm-debug.log
 testem.log
-
-### STS ###
-.apt_generated
-.classpath
-.factorypath
-.project
-.settings
-.springBeans
-.sts4-cache
 
 # e2e
 e2e/*.js
