--- a/ecommerce-backend/build.gradle
+++ b/ecommerce-backend/build.gradle
@@ -2,32 +2,48 @@ plugins {
     id 'java'
     id 'org.springframework.boot' version '3.2.5'
     id 'io.spring.dependency-management' version '1.1.4'
-    id 'org.flywaydb' version '10.12.0'
+//    id 'org.flywaydb' version '10.12.0'
 }
 
-group = 'com.ecommerce'
-version = '0.0.1-SNAPSHOT'
+group 'com.ecommerce'
+version '0.0.1-SNAPSHOT'
 
 java {
-    sourceCompatibility = '21'
+    sourceCompatibility = 21
+    targetCompatibility = 21
 }
 
 repositories {
     mavenCentral()
+
+}
+
+springBoot {
+    mainClass.set('com/ecommerce/ecommercebackend/EcommerceBackendApplication.java')
+    buildInfo{
+        properties {
+            artifact = 'ecommerce-backend'
+            version = '1.0.0'
+            group = 'com.ecommerce'
+            name = 'ecommerce-backend'
+        }
+    }
 }
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter'because 'Enable Spring Boot Starter'
     implementation 'org.springframework.boot:spring-boot-starter-web' because 'Enable Spring Spring Boot Web Starter'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa' because 'Enable Spring JPA starter'
+    implementation 'org.springframework.boot:org.springframework.boot.gradle.plugin:3.2.5' because 'Add Gradle Spring support'
+
     implementation 'com.mysql:mysql-connector-j' because 'Add MySQL J Connector Driver'
 
-//    if ("${gradle.buildProflie}" == 'local') {
+//    if ("${gradle.buildProfile}" == 'local') {
 //        implementation 'org.flywaydb:flyway-mysql' because 'Add Flyway to manage mySQL database'
 //    }
     testImplementation 'org.springframework.boot:spring-boot-starter-test' because 'Enable Spring Test starter'
 }
 
-tasks.named('test') {
-    useJUnitPlatform()
-}
+//test {
+//    useJUnitPlatform()
+//}
