--- a/ecommerce-backend/src/main/resources/application.properties
+++ b/ecommerce-backend/src/main/resources/application.properties
@@ -1,1 +1,16 @@
 spring.application.name=ecommerce-backend
+
+# DataSource settings
+spring.datasource.url=jdbc:mysql://localhost/ecommercedb
+spring.datasource.username=root
+spring.datasource.password=admin
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# JPA settings
+#spring.jpa.database-platform = org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.show-sql = true
+spring.jpa.open-in-view=true
+spring.jpa.hibernate.ddl-auto = none
+
+# Flyway settings
+spring.flyway.baseline-on-migrate = true
