--- a/ecommerce-database/build.gradle
+++ b/ecommerce-database/build.gradle
@@ -1,18 +1,19 @@
-plugins {
-    id 'org.flywaydb.flyway' version '10.12.0'
-}
+//plugins {
+//    id 'org.flywaydb.flyway' version '10.13.0'
+//}
 
-repositories {
-    mavenCentral()
-    maven{
-        url "https://download.red-gate.com/maven/release"
-    }
-}
+//repositories {
+//    mavenCentral()
+//    maven{
+//        url "https://download.red-gate.com/maven/release"
+//    }
+//}
 
-flyway {
-    url = 'jdbc:mysql://localhost:3306/ecommerce'
-    user = 'root'
-    password = 'admin'
-//    schemas = ['products']
-    locations = ['classpath:db/migration']
-}
+//flyway {
+//    print("Flyway: connecting & migrating database")
+//    url = 'jdbc:mysql://localhost:3306/ecommercedb'
+//    user = 'root'
+//    password = 'admin'
+////    schemas = ['products']
+//    locations = ['classpath:db/migration']
+//}
