--- a/settings.gradle
+++ b/settings.gradle
@@ -2,4 +2,5 @@ rootProject.name = "ecommerce"
 
 
 include 'ecommerce-backend', 'ecommerce-frontend', 'ecommerce-database'
-project(':ecommerce-database').projectDir = new File("/workspace/ecommerce-database")
+project(':ecommerce-database').projectDir = new File("ecommerce-database")
+project(':ecommerce-backend').projectDir = new File("ecommerce-backend")
