--- a/ecommerce-backend/src/main/resources/application.properties
+++ b/ecommerce-backend/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=ecommerce-backend
 # DataSource settings
 spring.datasource.url=jdbc:mysql://localhost:3306/ecommercedb
 spring.datasource.username=root
-spring.datasource.password=admin
+spring.datasource.password=qwerty123
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # JPA settings
