--- a/ecommerce-backend/src/main/resources/application.properties
+++ b/ecommerce-backend/src/main/resources/application.properties
@@ -4,10 +4,13 @@ spring.application.name=ecommerce-backend
 spring.datasource.url=jdbc:mysql://localhost:3306/ecommercedb
 spring.datasource.username=root
 spring.datasource.password=admin
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # JPA settings
 #spring.jpa.database-platform = org.hibernate.dialect.MySQL5InnoDBDialect
-spring.jpa.show-sql= true
+spring.jpa.show-sql = true
 spring.jpa.open-in-view=true
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto = none
+
+# Logging
+logging.level.org.springframework=INFO
+logging.level.org.hibernate.SQL=INFO
